align text assertiva device ipad mini issue

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -474,12 +474,15 @@
     font-size: 15px;
     color:#4F4F4F;
     margin-top: 10px;
+    margin-left: 15px;
 }
 
 .alternativa:hover {
     cursor: pointer;
 }
-
+.certo-errado {
+    margin-top: -10px;
+}
 .certo-errado:hover {
     cursor: pointer;
 }
